# digital-certificates

./: .gitignore  CMakeLists.txt  PKCS#1.md  README.md
.github/: CODEOWNERS
include/: RSA_cipher.h  RSA_generateKey.h  asn1.h  cer2txt.h  common.h  config.h  createCSR.h  encodeKey.h  generateCertificate.h  generate_CA.h  serialize.h  sha512.h  utils.h  verifyCSR.h
src/: RSA_cipher.c  RSA_generateKey.c  asn1.c  cer2txt.c  createCSR.c  encodeKey.c  generateCertificate.c  generate_CA.c  main.c  serialize.c  sha512.c  utils.c  verifyCSR.c
